2017-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* README.txt: Comprehensive white-space clean-up across
	GraphicsMagick core source files.  Hard TAB character is converted
	to spaces.  Trailing white-space garbage is stripped.

	* magick/colormap.c (MagickConstrainColormapIndex): Deprecate use
	of MagickConstrainColormapIndex() and prefer use of
	VerifyColormapIndex() and VerifyColormapIndexWithColors() due to
	avoiding dependence on index type, allowing provision of colors
	other than image->colors, and capturing more useful source file
	and line information.

	* coders/{rle.c, mat.c, xbm.c, sgi.c, png.c}: Eliminate size_t vs
	unsigned 32 conversion warnings in WIN64 build.

2017-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff: Import libtiff 4.0.9.

2017-11-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (DecodeImage): "Right-size" and "Right-type"
	DecodeImage() variables and check for EOF at every point of the
	way.  Pass buffer size as an argument.

	* coders/dib.c (DecodeImage): "Right-size" and "Right-type"
	DecodeImage() variables and check for EOF at every point of the
	way.  Pass buffer size as an argument.

	* coders/bmp.c (_BMPInfo): "Right-size" BMPInfo members.  The
	'long' type is promoted to 64-bit on LP64 systems and the large
	size is not needed.

2017-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c: Incorporate patch by Jan Spitalnik to add EXIF
	and ICC metadata support to the WebP coder.  While WebP is still
	supported back to libwebp 0.1.99, the metadata support requires at
	least libwebp 0.5.0.  Resolves SourceForge patch #52 "Add EXIF/ICC
	metadata support to WebP coder".

	* coders/png.c (ReadOneJNGImage): Fix JNG memory leaks when JPEG
	image fails to be read.
	(WriteOnePNGImage): Promotion of indexed PNG to RGBA lacked
	setting of image matte, resulting in undersized buffer allocation
	and heap overflow.  Fixes SourceForge bug #453 "Heap overflow in