@@ -35,9 +35,21 @@
 <div class="document">
 
 
+<p>2017-11-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/wpg.c (ReadWPGImage): Fix excessive use of disk resources
+due to unreasonable record length.  Addresses CVE-2017-14341.
+Notified of this issue (with suggested patch) via email by Petr
+Gajdos on Tue, 21 Nov 2017.</li>
+</ul>
+</blockquote>
 <p>2017-11-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>README.txt: Comprehensive white-space clean-up across
+GraphicsMagick core source files.  Hard TAB character is converted
+to spaces.  Trailing white-space garbage is stripped.</li>
 <li>magick/colormap.c (MagickConstrainColormapIndex): Deprecate use
 of MagickConstrainColormapIndex() and prefer use of
 VerifyColormapIndex() and VerifyColormapIndexWithColors() due to
